remove items upgrade

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             name="item"
             placeholder="Enter Item"
           />
-          <div class="error">
+          <div class="error message">
           </div>
         </div>
         <div class="form-control">
@@ -47,7 +47,7 @@
           placeholder="Filter Items"
         />
       </div>
-
+      <div id="confirm" class="message"></div>
       <ul id="item-list" class="items">
         <!-- <li>
           Apples
